chore: add list of ledgers to link with asset
