# docs/api/lke/sidebar.ts
@@ -254,6 +254,18 @@ const sidebar: SidebarsConfig = {
         },
         {
           type: "doc",
+          id: "api/lke/schemas/listofentityids",
+          label: "ListOfEntityIDs",
+          className: "schema",
+        },
+        {
+          type: "doc",
+          id: "api/lke/schemas/assetcreaterequest",
+          label: "AssetCreateRequest",
+          className: "schema",
+        },
+        {
+          type: "doc",
           id: "api/lke/schemas/assetupdaterequest",
           label: "AssetUpdateRequest",
           className: "schema",
@@ -274,12 +286,6 @@ const sidebar: SidebarsConfig = {
           type: "doc",
           id: "api/lke/schemas/debug",
           label: "Debug",
-          className: "schema",
-        },
-        {
-          type: "doc",
-          id: "api/lke/schemas/assetcreaterequest",
-          label: "AssetCreateRequest",
           className: "schema",
         },
       ],
